--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -6,10 +6,9 @@
     flex-flow: wrap;
     justify-content: center;
     //align-content: center;
-    margin: 0 0 0 0;
     &__zoom {
-        width: 1.28*119px;
-        height: 1.28*168.4px;
+        width: 1.2*119px;
+        height: 1.2*168.4px;
         margin: 0 1.42em 1.42em 1.425em;
         box-shadow: 1px 1px 10px 0px rgba(204, 204, 204, 0.9);
         &__menu {
